--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "Marco Bruno",
   "license": "MPL-2.0",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
-    "nunjucks": "^3.0.1"
+    "nunjucks": "^3.0.1",
+    "socket.io": "^2.0.4"
   },
   "devDependencies": {
     "nodemon": "^1.14.11"
